Style: Available rooms list not aligning to right This issue was occring in firefox browser

--- a/src/assets/styles/available_rooms.css
+++ b/src/assets/styles/available_rooms.css
@@ -26,7 +26,6 @@
     display: flex;
     gap: 14px;
 }
-
 .availableRooms .tbl td {
     /* background-color: pink; */
     padding: 14px;
@@ -36,9 +35,9 @@
     border-right: 1px solid var(--dark-blue);
     font-size: 16px;
 }
-
 .availableRooms .tbl .right {
-    text-align: right;
+    display: flex;
+    justify-content: right;
 }
 
 /* Room Type Value Component css */
@@ -48,10 +47,12 @@
     align-items: center;
     gap: 4px;
 }
+.roomStatusValue {
+    width: fit-content;
+}
 .roomTypeValue .ico, .roomStatusValue .ico {
     height: 26px;
 }
-
 .roomStatusValue .available {
     color: var(--green);
 }
